--- a/src/main/webapp/pages/template/ui.xhtml
+++ b/src/main/webapp/pages/template/ui.xhtml
@@ -10,6 +10,7 @@
 		<ui:insert name="header">
 			<title></title>
 		</ui:insert>
+		<h:outputStylesheet library="css" name="clb.css"  />
 		<h:outputScript library="javax.faces" name="jsf.js" target="head"/>
 	</h:head>
 	
