Refactor Code for GraphicPojos

--- a/src/main/webapp/pages/template/ui.xhtml
+++ b/src/main/webapp/pages/template/ui.xhtml
@@ -11,7 +11,7 @@
 			<title></title>
 		</ui:insert>
 		<h:outputStylesheet library="css" name="clb.css"  />
-		<h:outputScript library="javax.faces" name="jsf.js" target="head"/>
+		<h:outputStylesheet library="css" name="primefaces.css"  />
 	</h:head>
 	
 	<h:body>
