--- a/src/main/webapp/resources/css/clb.css
+++ b/src/main/webapp/resources/css/clb.css
@@ -62,3 +62,9 @@ body {
 .fullWidth {
 	width: 100% !important;
 }
+
+.fullWidthPadding {
+	width: 100% !important;
+	padding-left:10px;
+	padding-right:10px;
+}
