--- a/src/main/webapp/pages/template/ui.xhtml
+++ b/src/main/webapp/pages/template/ui.xhtml
@@ -10,10 +10,14 @@
 		<ui:insert name="header">
 			<title></title>
 		</ui:insert>
-		<h:outputStylesheet library="css" name="clb.css"  />
-		<h:outputStylesheet library="css" name="primefaces.css"  />
+		<script async="true" defer="true"
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpNE8GrlAD53B85yph_af7idApV2KjUwg"
+			type="text/javascript"></script>
+		<h:outputStylesheet library="css" name="clb.css" />
+		<h:outputStylesheet library="css" name="app.css" />
+		<h:outputStylesheet library="css" name="primefaces.css" />
 	</h:head>
-	
+
 	<h:body>
 		<ui:insert name="body">
 		</ui:insert>
