--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -89,8 +89,13 @@ body {
 .ui-dialog-titlebar {
 	color: yellow !important;
 	background-color: #0A122A !important;
-	font-size: 14px !important;
+	font-size: 18px !important;
 	font-weight: normal;
+	font-family: Arial, Helvetica, sans-serif !important;
+}
+
+.ui-dialog-title-dialog {
+	text-align: center;	
 }
 
 .ui-widget-content.mainTable {
@@ -117,4 +122,8 @@ body {
 
 .ui-widget-overlay {
    opacity: 0.8 !important;
+}
+
+.linkClass{
+	color: white !important;
 }
