--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -4,6 +4,12 @@ body {
 	margin: 0px !important;
 }
 
+.logoClass{
+	color: #DF7401 !important;
+	font-size: 22px ! important;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .homeMainDivClass{
 	background-color: #0A122A;
 	color: white !important;
@@ -12,8 +18,9 @@ body {
 }
 
 .homeMainDivBannerClass{
-	height:60px;
-	background-color: #0B243B !important;
+	background-color: #CED8F6 !important;
+	color: #0A122A !important;
+	font-size: 12px;
 }
 
 .mainDivClass {
@@ -116,8 +123,7 @@ body {
 }
 
 .ui-widget {
-	color: #CED8F6;
-	font-size: 12px !important;
+	color: #0A122A;
 	font-family: Arial, Helvetica, sans-serif !important;
 	font-weight: bold;
 }
