--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -21,6 +21,7 @@ body {
 	background-color: #CED8F6 !important;
 	color: #0A122A !important;
 	font-size: 12px;
+	font-weight: bold;
 }
 
 .mainDivClass {
@@ -59,13 +60,8 @@ body {
 	text-align: center !important;
 }
 
-.ui-panel {
-	background-color: #0B243B !important;
-}
-
 .ui-widget-content {
-	color: white !important;
-	background-color: #0A122A !important;
+	background-color: #CED8F6 !important;
 }
 
 .mainPanelCol1 {
@@ -108,8 +104,7 @@ body {
 .ui-dialog-titlebar {
 	color: yellow !important;
 	background-color: #0A122A !important;
-	font-size: 18px !important;
-	font-weight: normal;
+	font-size: 14px !important;
 	font-family: Arial, Helvetica, sans-serif !important;
 }
 
@@ -118,11 +113,11 @@ body {
 }
 
 .ui-widget-content.mainTable {
-	background-color: #0A122A !important;
+	background-color: #CED8F6 !important;
 	border: 0;
 }
 
-.ui-widget {
+.ui-widget.mainTable {
 	color: #0A122A;
 	font-family: Arial, Helvetica, sans-serif !important;
 	font-weight: bold;
@@ -130,7 +125,8 @@ body {
 
 .ui-panelGrid.mainTable {
 	border-collapse: separate;
-	background-color: #0A122A !important;
+	background-color: #CED8F6 !important;
+	font-size: 14px !important;
 }
 
 .ui-panelgrid-cell {
@@ -139,7 +135,7 @@ body {
 }
 
 .ui-widget-overlay {
-   opacity: 0.8 !important;
+   opacity: 0.7 !important;
 }
 
 .linkClass{
@@ -147,10 +143,11 @@ body {
 }
 
 .successDialogDiv{
-	padding:10px;
+	padding:5px;
 }
 
 .ui-panelGrid.successGrid {
 	border-collapse: separate;
-	background-color: #0A122A !important;
+	background-color: #CED8F6 !important;
+	font-size: 12px !important;
 }
