--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -61,6 +61,17 @@ body {
 	text-align: center !important;
 }
 
+.ui-button.signButtonExtended {
+	width: 300px !important;
+	padding: 5px !important;
+	background-color: orange !important;
+	color: white !important;
+	font-weight: bold;
+	font-size: 16px !important;
+	font-family: Arial, Helvetica, sans-serif !important;
+	text-align: center !important;
+}
+
 .ui-widget-content {
 	background-color: #CED8F6 !important;
 }
@@ -127,7 +138,8 @@ body {
 .ui-panelGrid.mainTable {
 	border-collapse: separate;
 	background-color: #CED8F6 !important;
-	font-size: 14px !important;
+	font-size: 22px !important;
+	font-weight: normal !important;
 }
 
 .ui-panelgrid-cell {
@@ -152,4 +164,15 @@ body {
 	background-color: #CED8F6 !important;
 	font-size: 12px !important;
 	padding: 0 !important;
+}
+
+.signUpPanel.ui-panel{
+	width: 650px;
+	font-size: 22px !important;
+	padding: 0;
+}
+
+.signUpPanel.ui-panel .ui-panel-titlebar{
+	background-color: #0A122A !important;
+	color: white;
 }
