--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -168,7 +168,8 @@ body {
 
 .signUpPanel.ui-panel{
 	width: 650px;
-	font-size: 22px !important;
+	font-size: 20px !important;
+	font-weight: normal !important;
 	padding: 0;
 }
 
