--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -54,7 +54,7 @@ body {
 .ui-button.signButton {
 	width: 100px !important;
 	padding: 5px !important;
-	background-color: orange !important;
+	background-color: #0A122A !important;
 	color: white !important;
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif !important;
