--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -138,7 +138,7 @@ body {
 .ui-panelGrid.mainTable {
 	border-collapse: separate;
 	background-color: #CED8F6 !important;
-	font-size: 22px !important;
+	font-size: 20px !important;
 	font-weight: normal !important;
 }
 
@@ -159,6 +159,15 @@ body {
 	padding:5px;
 }
 
+.recoverPasswordDiv{
+	font-size: 16px !important;
+}
+
+.recoverLinkPassword{
+	color: #013ADF !important;
+	font-size:16px !important;
+}
+
 .ui-panelGrid.successGrid {
 	border-collapse: separate;
 	background-color: #CED8F6 !important;
@@ -167,7 +176,7 @@ body {
 }
 
 .signUpPanel.ui-panel{
-	width: 650px;
+	width: 600px;
 	font-size: 20px !important;
 	font-weight: normal !important;
 	padding: 0;
