--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -4,6 +4,18 @@ body {
 	margin: 0px !important;
 }
 
+form {
+    margin-bottom: 0;
+}
+
+.menuSeparator{
+	position: relative; 
+	bottom: -2px;
+	background-color: #0A122A;
+	margin-left: 10px;
+	margin-right: 10px
+}
+
 .logoClass{
 	color: #DF7401 !important;
 	font-size: 22px ! important;
@@ -27,6 +39,13 @@ body {
 	color: #0A122A !important;
 	font-size: 12px;
 	font-weight: bold;
+	border-spacing: 0;
+}
+
+.menuLink{
+	color: #0A122A !important;
+	text-decoration: none !important;
+	font-size: 12px !important;
 }
 
 .mainDivClass {
@@ -194,4 +213,20 @@ body {
 
 .badUserText{
 	font-size: 16px !important;
+}
+
+
+.analysisDiv{
+	background-color: #0A122A !important;
+}
+
+.analysisDivClass{
+	color:white !important;
+	font-size: 12px !important;
+	font-family: Arial, Helvetica, sans-serif !important;
+}
+
+.analysisDivClassMainCell{
+	font-size: 14px !important;
+	font-weight: bold;
 }
