--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -272,11 +272,11 @@ form {
 .analysisChartCSS {
 	font-size: 12px;
 	width: 100% !important;
-	height: 450px !important;
+	height: 700px !important;
 }
 
 .selectOneMenuAnalysis.ui-selectonemenu {
-	width: 90% !important;
+	width: 85% !important;
 }
 
 .ui-datepicker {
@@ -296,4 +296,24 @@ form {
 .ui-selectonemenu .ui-selectonemenu-label {
 	background: #CED8F6 !important;
 	color: #0A122A !important;
+}
+
+.analysisPanelTitle{
+	font-size: 14px !important;
+	color: #0A122A !important;
+}
+
+.analysisTitle{
+	font-size: 12px !important;
+	color: #0A122A !important;
+	font-weight: bold;
+}
+
+.buildingImgAnalysis{
+	padding: 5px !important;
+}
+
+.chartPanel.ui-widget-content{
+	background-color: #E0ECF8 !important;
+	width: 99% !important;
 }
