--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -321,3 +321,8 @@ form {
 	background-color: #E0ECF8 !important;
 	width: 99% !important;
 }
+
+.ui-state-hover{
+	background-color: #0B3861 !important;
+	color: white !important;
+}
