--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -264,6 +264,7 @@ form {
 	color: white !important;
 	font-size: 12px !important;
 	font-family: Arial, Helvetica, sans-serif !important;
+	font-weight: bold !important;
 	padding-right: 30px !important;
 	padding-left: 30px !important;
 }
@@ -308,7 +309,7 @@ form {
 }
 
 .analysisTitle {
-	font-size: 12px !important;
+	font-size: 16px !important;
 	color: #0A122A !important;
 	font-weight: bold;
 }
@@ -320,7 +321,7 @@ form {
 
 .chartPanel.ui-widget-content {
 	background-color: #E0ECF8 !important;
-	width: 99% !important;
+	width: 99.5% !important;
 }
 
 .ui-datatable-selectable{
