--- a/src/main/webapp/pages/template/ui.xhtml
+++ b/src/main/webapp/pages/template/ui.xhtml
@@ -5,6 +5,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:pe="http://primefaces.org/ui/extensions"
 	>
 <f:view locale="en">
 	<h:head>
