--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -4,6 +4,14 @@ body {
 	margin: 0px !important;
 }
 
+.ui-g-12{
+	padding: 0 !important;
+}
+
+.ui-md-12{
+	padding: 0 !important;
+}
+
 footer {
 	background-color: #CED8F6;
 	width: 100%;
