--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -274,7 +274,6 @@ form {
 
 .analysisDiv {
 	background-color: #0A122A !important;
-	height: 100vh;
 }
 
 .analysisDivClass {
@@ -295,6 +294,9 @@ form {
 	font-size: 12px;
 	width: 100% !important;
 	height: 70vh !important;
+}
+.lastAnalysisDiv{
+	height:25vh !important;
 }
 
 .selectOneMenuAnalysis.ui-selectonemenu {
