--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -52,10 +52,8 @@ form {
 }
 
 .noRegClass {
-	color: #CED8F6 !important;
-	font-size: 28px ! important;
+	color: yellow !important;
 	font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
 }
 
 .ui-message-error-detail {
@@ -280,7 +278,6 @@ form {
 
 .analysisDiv {
 	background-color: #0A122A !important;
-	height: 100vh;
 }
 
 .analysisDivClass {
@@ -288,28 +285,26 @@ form {
 	font-size: 12px !important;
 	font-family: Arial, Helvetica, sans-serif !important;
 	font-weight: bold !important;
-	padding-right: 30px !important;
-	padding-left: 30px !important;
+	padding: 10px !important;
 }
 
 .analysisDivClassMainCell {
-	font-size: 20px !important;
+	font-size: 18px !important;
 	font-weight: bold;
+	color: #CED8F6;
+	padding-bottom: 5px;
+	padding-top: 5px;
 }
 
 .analysisChartCSS {
 	font-size: 12px;
 	width: 100% !important;
-	height: 65vh !important;
+	height: 85vh !important;
 }
 
 .lastAnalysisDiv {
 	height: 25vh !important;
 	background-color: #0A122A !important;
-}
-
-.selectOneMenuAnalysis.ui-selectonemenu {
-	width: 85% !important;
 }
 
 .ui-datepicker {
@@ -363,6 +358,7 @@ form {
 .analysisPanelTitle {
 	font-size: 14px !important;
 	color: #0A122A !important;
+	font-weight: bold;
 }
 
 .analysisTitle {
@@ -408,13 +404,12 @@ form {
 }
 
 .analysisLabels {
-	font-size: 12px !important;
+	font-size: 13px !important;
 	color: white !important;
 	vertical-align: middle !important;
 }
 
 .analysisViewDiv {
-	padding-top: 10px !important;
 	padding-right: 10px !important;
 	color: white !important;
 }
@@ -435,6 +430,10 @@ form {
 	padding-left: 25px;
 }
 
-.timeAnalysisPanel{
-	width:150px !important;
+.analysisMenuEntry{
+	padding-bottom: 10px !important;
+}
+
+.timeFrame .ui-inputfield{
+	width:100px !important;
 }
