--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -2,6 +2,7 @@ body {
 	width: 100%;
 	padding: 0px !important;
 	margin: 0px !important;
+	height: 100%;
 }
 
 .ui-g-12 {
@@ -85,9 +86,7 @@ form {
 .mainDivClass {
 	background-color: #0A122A;
 	color: white !important;
-	padding-top: 10px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding: 20px;
 	height: 100vh;
 }
 
@@ -278,9 +277,18 @@ form {
 
 .analysisDiv {
 	background-color: #0A122A !important;
+	height: 100vh;
 }
 
-.analysisDivClass {
+.buildingManagementDiv {
+	background-color: #0A122A !important;
+}
+
+.buildingDiv {
+	background-color: #0A122A !important;
+}
+
+.appDivClass {
 	color: white !important;
 	font-size: 12px !important;
 	font-family: Arial, Helvetica, sans-serif !important;
@@ -288,8 +296,15 @@ form {
 	padding: 10px !important;
 }
 
-.analysisDivClassMainCell {
-	font-size: 26px !important;
+.buildingDivClass {
+	color: #0A122A !important;
+	font-size: 12px !important;
+	font-family: Arial, Helvetica, sans-serif !important;
+	font-weight: bold !important;
+}
+
+.titleDivClass {
+	font-size: 22px !important;
 	font-weight: bold;
 	color: #CED8F6;
 	padding-bottom: 5px;
@@ -448,3 +463,17 @@ form {
 	display: table-cell; 
 	vertical-align: middle; 
 }
+
+.buildingManagementTable{
+	width:80%; 
+}
+
+.buildingManagementAnalyzers{
+	width: 20%;
+}
+
+.buildingManagementAnalyzers .ui-panel-content{
+	background-color: #0A122A !important;
+	color: #CED8F6 !important
+}
+
