Integrating Building on BuildingManagement

--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -485,3 +485,16 @@ form {
 .commonLink{
 	color: #CED8F6;
 }
+
+.buildingManagDelete{
+	font-size: 12px;
+}
+
+.buildingManagIconClass{
+	vertical-align: bottom;
+}
+
+.buildingLocation{
+	font-size:12px;
+	color:grey;
+}
