--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -498,3 +498,11 @@ form {
 	font-size:12px;
 	color:grey;
 }
+
+.divisionOptions{
+	font-size: 10px !important;
+}
+
+.buildingPanelClass{
+	border: none !important;
+}
