--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -1069,8 +1069,12 @@ body {
 	display: none;
 }
 
-.ui-treetable tbody td{
-	background-color: #3A3939 !important;
+.divisionTree tr.ui-state-highlight{
+	background-color: #CECECE !important;
+}
+
+.divisionTree.ui-treetable tbody tr{
+	background-color: #3A3939;
 	color: white;
 	font-family: arial;
 	font-size:12px;
@@ -1094,4 +1098,8 @@ body {
  	font-size: 12px !important;
  	color: #ABA9A6;
  	padding-bottom: 10px;
+ }
+ 
+ .ui-layout-unit{
+ 	z-index: auto;
  }
