--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -909,7 +909,7 @@ body {
 	background-color: #3A3939;
 }
 
-.header .loginForm .loginButton{
+.header .loginForm .loginButton {
 	float: left;
 	padding-right: 10px;
 }
@@ -930,19 +930,18 @@ body {
 	float: left;
 	padding-right: 15px;
 	padding-top: 15px;
-	height:30px;
+	height: 30px;
 }
 
 .header .loginForm .userLogged {
 	float: left;
 	padding-right: 20px;
 	padding-top: 20px;
-	height:30px;
+	height: 30px;
 	color: #E0B056;
 	font-weight: bold;
 	font-size: 15px;
 }
-
 
 /* line 23, ../scss/homepage/_header.scss */
 .header .loginForm .headerLabel {
@@ -982,31 +981,40 @@ body {
 	width: 100% !important;
 }
 
+.ui-inputtext {
+	height: 35px !important;
+}
 
 .ui-panel-titlebar {
 	font-size: 16px;
 }
 
-.ui-dialog-titlebar{
+.ui-dialog-titlebar {
 	font-size: 14px;
 }
 
-.ui-dialog-content{
+.ui-dialog-content {
 	background-color: #3A3939 !important;
 }
 
-.ui-panelgrid table tbody tr{
-    border: none;
+.ui-panelgrid table tbody tr {
+	border: none;
 }
 
-.ui-panelgrid>*>tr,
-.ui-panelgrid .ui-panelgrid-cell {
-    border: none !important;
-    font-size: 12px !important;
+.graphTitle .ui-panel-titlebar{
+	background-color: #3A3939 !important;
+	color: white !important;
+	font-weight: normal !important;
+	font-family: arial !important;
+}
+
+.ui-panelgrid>*>tr, .ui-panelgrid .ui-panelgrid-cell {
+	border: none !important;
+	font-size: 12px !important;
 	font-family: arial !important;
 	background-color: #3A3939 !important;
 	color: #DCDBD9 !important;
-	font-weight:bold !important;
+	font-weight: bold !important;
 }
 
 .regFormLink {
@@ -1041,65 +1049,134 @@ body {
 	color: black;
 }
 
-.verticalLine{
-  border-left: 1px solid #D7D2D2;
-  height: 35px;
+.verticalLine {
+	border-left: 1px solid #D7D2D2;
+	height: 35px;
 }
 
-.buindingItemAnalysis{
-	color:black;
+.buindingItemAnalysis {
+	color: black;
 	font-size: 15px;
 }
 
-.buildingPanelClass{
+.buildingPanelClass {
 	margin-bottom: 10px;
 	background-color: grey !important;
-	font-size:12px;
+	font-size: 12px;
 }
 
-.ui-treetable{
-    padding-bottom: 15px !important;
+.ui-treetable {
+	padding-bottom: 15px !important;
 }
 
 .ui-treetable table {
-    table-layout: fixed;
+	table-layout: fixed;
 }
 
-.ui-treetable thead th{
+.ui-treetable thead th {
 	display: none;
 }
 
-.divisionTree tr.ui-state-highlight{
+.divisionTree tr.ui-state-highlight {
 	background-color: #CECECE !important;
 }
 
-.divisionTree.ui-treetable tbody tr{
+.divisionTree.ui-treetable tbody tr {
 	background-color: #3A3939;
 	color: white;
 	font-family: arial;
-	font-size:12px;
+	font-size: 12px;
 }
- 
+
 .value {
-    font-weight: bold
+	font-weight: bold
 }
- 
+
 .ui-dialog table {
-	 margin-left:auto; 
-	 margin-right:auto;
- }
- 
- .buildingLinks{
- 	font-size:12px !important;
- 	color: #DCDBD9 !important;
- }
- 
- .analysisNewBuildingClass{
- 	font-size: 12px !important;
- 	color: #ABA9A6;
- 	padding-bottom: 10px;
- }
- 
- .ui-layout-unit{
- 	z-index: auto;
- }
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.buildingLinks {
+	font-size: 12px !important;
+	color: #DCDBD9 !important;
+}
+
+.analysisNewBuildingClass {
+	font-size: 12px !important;
+	color: #ABA9A6;
+	padding-bottom: 10px;
+}
+
+.analyzersStatus {
+	background-color: #3A3939 !important;
+	color: white !important;
+}
+
+.ui-datatable table {
+	font-size: 12px !important;
+}
+
+.ui-datatable {
+	padding-bottom: 10px;
+}
+
+.ui-datalist .ui-datalist-content {
+	border: none;
+}
+
+.ui-datalist ul {
+	padding: 0px 10px 0 20px;
+	margin: 5px 0;
+}
+
+.ui-selectmanymenu {
+	width: 175px !important;
+	height: 100% !important;
+	text-align: left !important;
+}
+
+.ui-selectlistbox-list {
+	overflow: hidden;
+	text-align: left !important;
+}
+
+.ui-selectlistbox-item {
+	color: #3A3939 !important;
+	font-size: 12px !important;
+	text-align: left !important;
+}
+
+.labelMany {
+	vertical-align: top;
+}
+
+.analyzerListCss{
+	color: #E0B056;
+    font-size: 14px !important;
+    font-weight: bold;
+}
+
+.analysisChart {
+	height:70vh !important;
+	width:75vw !important;
+}
+
+.introAnalysis{
+	background-color: #F2F2F2 !important;
+	text-align: center !important;
+}
+
+.hasDatepicker{
+	width:300px !important;
+}
+
+.ui-selectonemenu{
+	vertical-align: middle !important;
+}
+
+.ui-selectonemenu-label{
+	font-size: 12px !important;
+	height: 20px !important;
+	vertical-align: middle !important;
+}
